--- a/apps/ccm-fe/src/app/app.component.html
+++ b/apps/ccm-fe/src/app/app.component.html
@@ -1,1 +1,4 @@
-<oss-ccm-nx-welcome></oss-ccm-nx-welcome> <router-outlet></router-outlet>
+<!-- <oss-ccm-nx-welcome></oss-ccm-nx-welcome> -->
+<oss-ccm-navbar />
+<router-outlet></router-outlet>
+<oss-ccm-footer />
