--- a/apps/ccm-fe/src/styles.css
+++ b/apps/ccm-fe/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0;
+  padding: 0;
+}
+
+@font-face {
+  src: url('/fonts/source_code_pro/SourceCodePro-Regular.ttf');
+  font-family: 'Source Code Pro', monospace;
+  font-weight: 400;
+  font-style: normal;
+}
