feat: add placeholder login/register routes
- add login & register feature libraries
- bind login/register feature to routes in app.routes.ts

--- a/libs/frontend/shared/ui/navbar/src/lib/frontend-shared-ui-navbar/frontend-shared-ui-navbar.component.html
+++ b/libs/frontend/shared/ui/navbar/src/lib/frontend-shared-ui-navbar/frontend-shared-ui-navbar.component.html
@@ -2,7 +2,7 @@
   <nav>
     <ul>
       <li *ngFor="let link of NAVBAR_LINKS">
-        <a [href]="link.url">
+        <a [routerLink]="link.url">
           {{ link.label }}
         </a>
       </li>
